--- a/public/index.html
+++ b/public/index.html
@@ -27,17 +27,14 @@
     <title>小区帮手</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script
+      type="text/javascript"
+      src="http://api.map.baidu.com/api??type=webgl&v=2.0&ak='km0if9tnyPmKyykBUp3xTG1D8GbGwOtk">
+	  </script>
+    <script>
+      window.BMap = BMap
+    </script>
   </body>
 </html>
