--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,11 @@
     <div id="root"></div>
     <script
       type="text/javascript"
-      src="http://api.map.baidu.com/api??type=webgl&v=2.0&ak='km0if9tnyPmKyykBUp3xTG1D8GbGwOtk">
-	  </script>
+      src="http://api.map.baidu.com/api?type=webgl&v=1.0&ak=km0if9tnyPmKyykBUp3xTG1D8GbGwOtk"
+    >
+	</script>
     <script>
-      window.BMap = BMap
+      window.BMap = BMapGL;
     </script>
   </body>
 </html>
