--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,12 @@
   <body>
     
     <div id="root"></div>
+    <!-- 百度地图api1.0版本 -->
+    <script type="text/javascript" src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=km0if9tnyPmKyykBUp3xTG1D8GbGwOtk"></script>
     <!-- 百度地图api2.0版本 -->
-    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=km0if9tnyPmKyykBUp3xTG1D8GbGwOtk&services=true&s=1"></script>
+    <!-- <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=km0if9tnyPmKyykBUp3xTG1D8GbGwOtk&services=true&s=1"></script> -->
     <script>
-      window.BMap = BMap;
+      window.BMap = BMapGL;
     </script>
   </body>
 </html>
